code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

03-May-2011 Jean-Marie Simonet
 # [#25796] *Editing template files is impossible if Codemirror and editor None are disabled
 # [#25795] *Normalizing language load in profile plugin
 # [#25642] Update TinyMCE to version 3.3.9.4. Thanks Rouven.
 
28-Apr-2011 Christophe Demko
 # [#25693] Incorrect importing of languagefilter, plugin's class is initialised twice (Dennis Hermatski)

27-Apr-2011 Christophe Demko
 # [#24360] User Profile Date showing wrong Birthday date (Omar Ramos)
 # [#25771] *Languagefilter plugin parameter not implemented (Jean-Marie Simonet)

27-Apr-2011 Jean-Marie Simonet
 # [#25759] Broken system messages in beez_20 and beez5. Thanks Dennis.
 # [#25752] No ending fieldset tag in com_contact. Thanks Dennis.
 
26-Apr-2011 Jean-Marie Simonet
 $ [#25742] SPACERDROP_LABEL too long for a label. Thanks Paulo.
 # [#25753] Hathor bugs with batch function. Thanks Dennis.
 $ [#25723] I can't remove script,applet,iframe form tinyMCE blacklist. Thanks Bill.

 25-Apr-2011 Jean-Marie Simonet
 #$ Updating ta-IN installation language
 # [#25739] Batch actions for articles. Thanks Dennis.

23-Apr-2011 Jean-Marie Simonet
 #$ [#25724] *Improving the langswitcher module, correcting some ini strings
 # [#25717] *If plugin language filter is enabled a contact with linked user shows articles in all languages instead of filtered for current language. Thanks Marcel and Dennis.
 # [#25725] You can delete the default template style. Thanks Elin.
 
22-Apr-2011 Jean-Marie Simonet
 # [#25722] *Displaying status of Content languages Default Home page in Manager.

-------------------- 1.6.3 Stable Release [18-Apr-2011] ------------------

18-Apr-2011 Mark Dexter
 # [#25661] *Redirect not now fully editable
 # [#25657] Mootools no longer loaded in backend
 # [#25688] Updates sites never re-enabled after being disabled

16-Apr-2011 Jean-Marie Simonet